2002-11-24  Neal H. Walfield  <neal@g10code.de>

	* assuan.h (assuan_sendfd): New prototype.
	(assuan_receivefd): New prototype.
	* assuan-buffer.c (assuan_sendfd): New function.
	(assuan_receivefd): New function.
	* assuan-handler.c (parse_cmd_input_output): Recognize incoming
	file descriptors and act appropriately.
	* assuan-defs.h (struct assuan_io): Add fields sendfd and
	receivefd.
	(struct assuan_context_s): Add fields pendingfds and
	pendingfdscount.
	* assuan-pipe-server.c (_assuan_new_context): Update IO to reflect
	new features.
	* assuan-domain-connect.c (do_deinit): Cleanup any unreceived file
	descriptors.
	(domain_reader): Receive file descriptors.
	(domain_sendfd): New function.
	(domain_receivefd): New function.
	(_assuan_domain_init): Update initialization code to reflect new
	features.

2002-11-24  Neal H. Walfield  <neal@g10code.de>

	* assuan-domain-connect.c (do_finish): Remove.
	(_assuan_domain_init): Use default handlers where possible.
	Add an assert and update comments.
	* assuan-domain-server.c (accept_connection): Remove.
	(assuan_init_domain_server): Use default handlers where possible.
	Put the server in pipe mode: it can only be used by a single
	client.

2002-11-24  Neal H. Walfield  <neal@g10code.de>

	* assuan.h: Add prototype for assuan_domain_connect and
	assuan_init_domain_server.
	* assuan-defs.h: Include <unistd.h>.
	Add prototype for _assuan_domain_init.
	* assuan-domain-connect.c: New file.
	* assuan-domain-server.c: New file.
	* Makefile.am (libassuan_a_SOURCES): Add assuan-domain-connect.c
	and assuan-domain-server.c

2002-11-23  Neal H. Walfield  <neal@g10code.de>

	* Makefile.am (libassuan_a_SOURCES): Add assuan-io.c.
	* assuan-io.c: Restore.
	(_assuan_simple_read): Rename from _assuan_read.
	(_assuan_simple_write): Rename from _assuan_write.
	* assuan-defs.h (_assuan_simple_read): New prototype.
	(_assuan_simple_write): Likewise.
	* assuan-pipe-server.c (pipe_reader): Remove.
	(pipe_writer): Remove.